--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="hidden xl:flex xl:justify-center"></ul></div>
           <div class="w-1/2 xl:w-1/3">
             <div class="hidden xl:flex items-center justify-end">
-              <a class="inline-block py-2 px-4 mr-2 leading-5 text-coolGray-500 hover:text-coolGray-900 bg-transparent font-medium rounded-md" href="signin.html">Log In</a><a class="inline-block py-2 px-4 text-sm leading-5 text-green-50 bg-green-500 hover:bg-green-600 font-medium focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 rounded-md" href="signup.html">Sign Up</a>
+              <a class="inline-block py-2 px-4 mr-2 leading-5 text-coolGray-500 hover:text-coolGray-900 bg-transparent font-medium rounded-md" href="https://app.speakerscribe.com">Log In</a><a class="inline-block py-2 px-4 text-sm leading-5 text-green-50 bg-green-500 hover:bg-green-600 font-medium focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 rounded-md" href="https://app.speakerscribe.com">Sign Up</a>
             </div>
           </div>
           </div>
