--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="max-w-4xl mx-auto text-center">
             <h2 class="mb-4 text-3xl md:text-4xl font-heading font-bold">The fastest way from idea to proposals. Period.</h2>
             <p class="mb-6 text-lg md:text-xl font-heading font-medium text-coolGray-500">Take Your Conference Talk Proposals to New Heights with AI - Simple, Effective, and Innovative.</p>
-            <a class="inline-block py-3 px-7 w-full md:w-auto text-lg leading-7 text-green-50 bg-green-500 hover:bg-green-600 font-medium text-center focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm" href="signup.html">Get Started</a>
+            <a class="inline-block py-3 px-7 w-full md:w-auto text-lg leading-7 text-green-50 bg-green-500 hover:bg-green-600 font-medium text-center focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm" href="https://app.speakerscribe.com">Get Started</a>
           </div>
         </div>
       </section>
