--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 class="mb-6 text-3xl md:text-5xl lg:text-6xl leading-tight font-bold tracking-tight">Speaker Scribe - Free AI-Powered Talk Proposal Generator</h1>
                 <p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Harness the Power of GPT-4 to Create Tailored Conference Proposals. Streamline Your Process, Save Time, and Increase Success Rates</p>
                 <div class="flex flex-wrap">
-                  <div class="w-full md:w-auto py-1 md:py-0 md:mr-4"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-green-50 font-medium text-center bg-green-500 hover:bg-green-600 focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-green-500 rounded-md shadow-sm" href="#">Try it Out Now</a></div>
+                  <div class="w-full md:w-auto py-1 md:py-0 md:mr-4"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-green-50 font-medium text-center bg-green-500 hover:bg-green-600 focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-green-500 rounded-md shadow-sm" href="https://speakerscribe.com">Try it Out Now</a></div>
                   <div class="w-full md:w-auto py-1 md:py-0"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-coolGray-800 font-medium text-center bg-white hover:bg-coolGray-100 focus:ring-2 focus:ring-coolGray-200 focus:ring-opacity-50 border border-coolGray-200 rounded-md shadow-sm" href="https://github.com/soham96/talk-app">Contribute</a></div>
                 </div>
               </div>
