--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
           <nav class="relative p-6 h-full overflow-y-auto"><div class="flex flex-col justify-between h-full">
             <a class="inline-block" href="#">
               <img class="h-8" src="flex-ui-assets/logos/flex-ui-green-light.svg" alt=""></a>
-            <ul class="py-6"><li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="#">Product</a></li>
-              <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="#">Features</a></li>
-              <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="#">Pricing</a></li>
-              <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="#">Resources</a></li>
+            <ul class="py-6"><li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="https://speakerscribe.com">Home</a></li>
+              <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="https://speakerscribe.com">Features</a></li>
+              <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="https://github.com/soham96/talk-app">Contribute</a></li>
             </ul><div class="flex flex-wrap">
-            <div class="w-full mb-2"><a class="inline-block py-2 px-4 w-full text-sm leading-5 text-coolGray-500 hover:text-coolGray-900 bg-transparent font-medium text-center rounded-md" href="#">Log In</a></div>
-            <div class="w-full"><a class="inline-block py-2 px-4 w-full text-sm leading-5 text-white bg-green-500 hover:bg-green-600 font-medium text-center focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 rounded-md" href="#">Sign Up</a></div>
+            <div class="w-full mb-2"><a class="inline-block py-2 px-4 w-full text-sm leading-5 text-coolGray-500 hover:text-coolGray-900 bg-transparent font-medium text-center rounded-md" href="https://app.speakerscribe.com">Log In</a></div>
+            <div class="w-full"><a class="inline-block py-2 px-4 w-full text-sm leading-5 text-white bg-green-500 hover:bg-green-600 font-medium text-center focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 rounded-md" href="https://app.speakerscribe.com">Sign Up</a></div>
             </div>
             </div>
           </nav><a class="navbar-close absolute top-5 p-4 right-3" href="#">
@@ -56,7 +55,7 @@
                 <h1 class="mb-6 text-3xl md:text-5xl lg:text-6xl leading-tight font-bold tracking-tight">Speaker Scribe - Free AI-Powered Talk Proposal Generator</h1>
                 <p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Harness the Power of GPT-4 to Create Tailored Conference Proposals. Streamline Your Process, Save Time, and Increase Success Rates</p>
                 <div class="flex flex-wrap">
-                  <div class="w-full md:w-auto py-1 md:py-0 md:mr-4"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-green-50 font-medium text-center bg-green-500 hover:bg-green-600 focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-green-500 rounded-md shadow-sm" href="https://speakerscribe.com">Try it Out Now</a></div>
+                  <div class="w-full md:w-auto py-1 md:py-0 md:mr-4"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-green-50 font-medium text-center bg-green-500 hover:bg-green-600 focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-green-500 rounded-md shadow-sm" href="https://app.speakerscribe.com">Try it Out Now</a></div>
                   <div class="w-full md:w-auto py-1 md:py-0"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-coolGray-800 font-medium text-center bg-white hover:bg-coolGray-100 focus:ring-2 focus:ring-coolGray-200 focus:ring-opacity-50 border border-coolGray-200 rounded-md shadow-sm" href="https://github.com/soham96/talk-app">Contribute</a></div>
                 </div>
               </div>
