--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="fixed top-0 left-0 bottom-0 w-full w-4/6 max-w-xs bg-white">
           <nav class="relative p-6 h-full overflow-y-auto"><div class="flex flex-col justify-between h-full">
             <a class="inline-block" href="#">
-              <img class="h-8" src="flex-ui-assets/logos/flex-ui-green-light.svg" alt=""></a>
+              <img class="h-8" src="images/Add-a-subheading.png" alt=""></a>
             <ul class="py-6"><li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="https://speakerscribe.com">Home</a></li>
               <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="https://speakerscribe.com">Features</a></li>
               <li><a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="https://github.com/soham96/talk-app">Contribute</a></li>
