--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Speaker Scribe: Free AI-Powered Talk Proposal Generator for Conferences</title>
+    <title>Speaker Scribe: Shape Your Ideas into Winning Proposals and Powerful Presentations</title>
     <meta charset="utf-8">
     <meta name="description" content="free, AI-powered, talk proposal generator, conference, GPT-4, Speaker Scribe">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,8 +52,8 @@
           <div class="container px-4 mx-auto">
             <div class="flex flex-wrap xl:items-center -mx-4">
               <div class="w-full md:w-1/2 px-4 mb-16 md:mb-0">
-                <h1 class="mb-6 text-3xl md:text-5xl lg:text-6xl leading-tight font-bold tracking-tight">Speaker Scribe - Free AI-Powered Talk Proposal Generator</h1>
-                <p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Harness the Power of GPT-4 to Create Tailored Conference Proposals. Streamline Your Process, Save Time, and Increase Success Rates</p>
+                <h1 class="mb-6 text-3xl md:text-5xl lg:text-6xl leading-tight font-bold tracking-tight">Speaker Scribe: Shape Your Ideas into Winning Proposals and Powerful Presentations</h1>
+                <p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Harness the Power of GPT-4 to Craft Tailored Conference Proposals and Engaging Presentations. Streamline Your Process, Save Time, and Increase Success Rates</p>
                 <div class="flex flex-wrap">
                   <div class="w-full md:w-auto py-1 md:py-0 md:mr-4"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-green-50 font-medium text-center bg-green-500 hover:bg-green-600 focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-green-500 rounded-md shadow-sm" href="https://app.speakerscribe.com">Try it Out Now</a></div>
                   <div class="w-full md:w-auto py-1 md:py-0"><a class="inline-block py-5 px-7 w-full text-base md:text-lg leading-4 text-coolGray-800 font-medium text-center bg-white hover:bg-coolGray-100 focus:ring-2 focus:ring-coolGray-200 focus:ring-opacity-50 border border-coolGray-200 rounded-md shadow-sm" href="https://github.com/soham96/talk-app">Contribute</a></div>
@@ -76,11 +76,12 @@
                 <img class="absolute z-10 -right-8 -top-8 w-28 md:w-auto" src="flex-ui-assets/elements/circle3-yellow.svg" alt="">
                 <img class="absolute z-10 -left-10 -bottom-8 w-28 md:w-auto" src="flex-ui-assets/elements/dots3-blue.svg" alt="">
                 <img src="images/2.png" alt="">
+                <img src="images/present.png" alt="">
               </div>
             </div>
             <div class="w-full md:w-1/2 px-4">
               <span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-green-500 bg-green-100 font-medium uppercase rounded-full shadow-sm">How it works</span>
-              <h2 class="mb-12 text-4xl md:text-5xl leading-tight font-bold tracking-tighter">Streamlining Your Conference Proposal Process</h2>
+              <h2 class="mb-12 text-4xl md:text-5xl leading-tight font-bold tracking-tighter">Streamlining Your Conference Presentation Process</h2>
               <div class="flex flex-wrap -mx-4 text-center md:text-left">
                 <div class="w-full md:w-1/2 px-4 mb-8">
                   <div class="inline-flex items-center justify-center mb-4 w-12 h-12 text-xl text-white bg-green-500 font-semibold rounded-full">1</div>
@@ -89,18 +90,18 @@
                 </div>
                 <div class="w-full md:w-1/2 px-4 mb-8">
                   <div class="inline-flex items-center justify-center mb-4 w-12 h-12 text-xl text-white bg-green-500 font-semibold rounded-full">2</div>
-                  <h3 class="mb-2 text-xl font-bold">AI Analysis and Enhancement:</h3>
-                  <p class="font-medium text-coolGray-500">Our advanced GPT-based AI takes your inputs and analyses them in the context of effective conference talk proposals</p>
+                  <h3 class="mb-2 text-xl font-bold">AI-Driven Proposal Crafting:</h3>
+                  <p class="font-medium text-coolGray-500">Our GPT-4 AI system steps in, knitting your inputs into a persuasive proposal, keeping in sync with the conference's themes and trends</p>
                 </div>
                 <div class="w-full md:w-1/2 px-4 mb-8">
                   <div class="inline-flex items-center justify-center mb-4 w-12 h-12 text-xl text-white bg-green-500 font-semibold rounded-full">3</div>
-                  <h3 class="mb-2 text-xl font-bold">Automated Proposal Generation</h3>
-                  <p class="font-medium text-coolGray-500">Ensures the final output is tailored to your specific needs and the conference's themes and trends.</p>
+                  <h3 class="mb-2 text-xl font-bold">Refine and Shine:</h3>
+                  <p class="font-medium text-coolGray-500">Inspect and refine the generated proposal. Our smart AI ensures the final output is tailored to your specific needs and the conference's themes and trends.</p>
                 </div>
                 <div class="w-full md:w-1/2 px-4">
                   <div class="inline-flex items-center justify-center mb-4 w-12 h-12 text-xl text-white bg-green-500 font-semibold rounded-full">4</div>
-                  <h3 class="mb-2 text-xl font-bold">Proposal Review and Revision: </h3>
-                  <p class="font-medium text-coolGray-500">Learns from your revisions, making future proposals even more tailored to your style and preferences</p>
+                  <h3 class="mb-2 text-xl font-bold">Presentation Creation: </h3>
+                  <p class="font-medium text-coolGray-500">Take your proposal to the next level by creating an engaging presentation</p>
                 </div>
               </div>
             </div>
@@ -111,8 +112,8 @@
       <section class="py-20 md:py-28 bg-white" style="background-image: url('flex-ui-assets/elements/pattern-white.svg'); background-position: center;">
         <div class="container px-4 mx-auto">
           <div class="max-w-4xl mx-auto text-center">
-            <h2 class="mb-4 text-3xl md:text-4xl font-heading font-bold">The fastest way from idea to proposals. Period.</h2>
-            <p class="mb-6 text-lg md:text-xl font-heading font-medium text-coolGray-500">Take Your Conference Talk Proposals to New Heights with AI - Simple, Effective, and Innovative.</p>
+            <h2 class="mb-4 text-3xl md:text-4xl font-heading font-bold">The fastest way from idea to presentations. Period.</h2>
+            <p class="mb-6 text-lg md:text-xl font-heading font-medium text-coolGray-500">Take Your Conference Talks to New Heights with AI - Simple, Effective, and Innovative.</p>
             <a class="inline-block py-3 px-7 w-full md:w-auto text-lg leading-7 text-green-50 bg-green-500 hover:bg-green-600 font-medium text-center focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm" href="https://app.speakerscribe.com">Get Started</a>
           </div>
         </div>
